--- a/Views/MeritBlanketView.xaml
+++ b/Views/MeritBlanketView.xaml
@@ -11,7 +11,7 @@
         <Border Grid.Row="0" BorderBrush="Gray" BorderThickness="0" Visibility="Visible">
                 <StackPanel Margin="10"  Grid.Column="0" Grid.Row="4"  x:Name="meritBlanket" >
 
-                    <Label Content="Ansøgning om merit på Grundforløb , GF2:" Margin="10" FontSize="20" FontWeight="Bold" />
+                    <Label Content="Ansøgning om merit på Grundforløb , GF2:" Margin="10" FontSize="20" FontStyle="Italic" FontWeight="Bold" />
                     <Border BorderBrush="Gray" BorderThickness="1" Margin="10" x:Name="DanskValidation" >
                         <StackPanel Margin="10">
                             <Label Content="Dansk:" FontSize="20" FontWeight="Bold"/>
