--- a/Views/BlanketView.xaml
+++ b/Views/BlanketView.xaml
@@ -1,49 +1,47 @@
 ﻿<UserControl x:Class="GFElevInterview.Views.BlanketView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:GFElevInterview.Views"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Border Background="WhiteSmoke" x:Name="blanketView" BorderBrush="Gray" BorderThickness="2" >
+        <Border Background="WhiteSmoke" x:Name="blanketView" BorderBrush="Gray" BorderThickness="2">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="50"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="40"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="100"/>
+                    <RowDefinition Height="50" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="40" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="100" />
                 </Grid.RowDefinitions>
 
-                <Border Grid.Row="0" BorderBrush="Gray"  >
-                    
+                <Border Grid.Row="0" BorderBrush="Gray">
+
                     <WrapPanel>
-                         <Label FontSize="20" FontWeight="Bold" FontStyle="Italic" >Søge elev :</Label>
-                         <TextBox x:Name="SearchStudentTxt"  Margin="10" Width="650"  Height="30"  Background="WhiteSmoke" TextChanged="SearchStudentTxt_TextChanged"  />
+                        <Label FontSize="20" FontWeight="Bold" FontStyle="Italic" >Søge elev :</Label>
+                        <TextBox x:Name="SearchStudentTxt"  Margin="10" Width="650"  Height="30"  Background="WhiteSmoke" TextChanged="SearchStudentTxt_TextChanged" />
                     </WrapPanel>
                 </Border>
-                
-                <Border Grid.Row="1" BorderBrush="Gray"  >
 
-                    <ListBox x:Name="SearchStudentBox"  Background="WhiteSmoke"  SelectionChanged="SearchStudentBox_SelectionChanged"  >  
-                          <ListBox.ItemTemplate>
-                              <DataTemplate>
-                                 <TextBlock Text="{Binding  FullInfo}"/>
-                              </DataTemplate>
-                          </ListBox.ItemTemplate>
+                <Border Grid.Row="1" BorderBrush="Gray">
 
-                      </ListBox>
+                    <ListBox x:Name="SearchStudentBox"  Background="WhiteSmoke"  SelectionChanged="SearchStudentBox_SelectionChanged">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding FuldInfo}" />
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
                 </Border>
 
-                <Border Grid.Row="2" BorderBrush="Gray" >
-                            <WrapPanel>
-                                <Label FontSize="20"  Content="" Name="StudentsFullInfo" VerticalContentAlignment="Top" />
-                            </WrapPanel>
-                        </Border>
-                    
-                
+                <Border Grid.Row="2" BorderBrush="Gray">
+                    <WrapPanel>
+                        <Label FontSize="20"  Content="" Name="StudentsFullInfo" VerticalContentAlignment="Top" />
+                    </WrapPanel>
+                </Border>
+
                 <Border  BorderBrush="Gray"  Grid.Row="3" Panel.ZIndex="0">
                     <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" x:Name="scrollview">
                         <ContentControl x:Name="mainContent" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
@@ -55,23 +53,18 @@
                     </ScrollViewer>
                 </Border>
 
-
                 <Border BorderBrush="Gray"  Grid.Row="4">
                     <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
-                    
-                    <Button x:Name="btnFrem" Content="Frem" Grid.Column="1" Background="Gray" Height="50" Width="150" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="20" Foreground="White" FontSize="22" Click="Frem_Click"/>
-                    <Button x:Name="btnTilbage" Content="Tilbage" Grid.Column="0" Background="Gray" Height="50" Width="150" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20" Foreground="White" FontSize="22" Click="Tilbage_Click"/>
 
+                        <Button x:Name="btnFrem" Content="Frem" Grid.Column="1" Background="Gray" Height="50" Width="150" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="20" Foreground="White" FontSize="22" Click="Frem_Click" />
+                        <Button x:Name="btnTilbage" Content="Tilbage" Grid.Column="0" Background="Gray" Height="50" Width="150" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20" Foreground="White" FontSize="22" Click="Tilbage_Click" />
                     </Grid>
                 </Border>
-
             </Grid>
-            
         </Border>
-            
     </Grid>
 </UserControl>
