--- a/Views/EUVView.xaml
+++ b/Views/EUVView.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GFElevInterview.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Background="White">
+             d:DesignHeight="5000" d:DesignWidth="800" Background="White">
     <!--Default Height "450" Width "800"-->
     <Grid>
         <StackPanel>
@@ -45,20 +45,6 @@
                                                 <TextBlock TextWrapping="WrapWithOverflow" Text="B. Fejlfinding til modulniveau på computere og på netværk i forbindelse med opbygning og vedligehold af lokalnet."  FontSize="14.5" Margin="0,5,0,5"/>
                                                 <TextBlock TextWrapping="WrapWithOverflow" Text="C. Installation, opsætning og konfiguration af forskellige former for backup på servere, netværksenheder som fx Routere, Switche mv. samt WAN-netværk med tilhørende adgangstyper og sikkerhedsopsætninger." FontSize="14.5"/>
                                             </StackPanel>
-                                            <Border BorderBrush="Black" BorderThickness="1">
-                                                <StackPanel Margin="0,60,0,0">
-                                                    <RadioButton x:Name="euv1Spg1Ja" Content="Ja" Margin="15,0,0,50">
-                                                        <RadioButton.RenderTransform>
-                                                            <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
-                                                        </RadioButton.RenderTransform>
-                                                    </RadioButton>
-                                                    <RadioButton x:Name="euv1Spg1Nej" Content="Nej" Margin="15,0,0,0">
-                                                        <RadioButton.RenderTransform>
-                                                            <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
-                                                        </RadioButton.RenderTransform>
-                                                    </RadioButton>
-                                                </StackPanel>
-                                            </Border>
                                         </DockPanel>
                                     </StackPanel>
                                 </Border>
@@ -71,20 +57,6 @@
                                                 <TextBlock TextWrapping="WrapWithOverflow" Text="B. Design og opbygning af lokalnet med ekstern opkobling" FontSize="14.5" Margin="0,8,0,0"/>
                                                 <TextBlock TextWrapping="WrapWithOverflow" Text="C. Kundeservice" FontSize="14.5" Margin="0,8,0,0"/>
                                             </StackPanel>
-                                            <Border BorderBrush="Black" BorderThickness="1">
-                                                <StackPanel Margin="0,25,0,0">
-                                                    <RadioButton x:Name="euv1Spg2Ja" Content="Ja"  Margin="15,0,0,25">
-                                                        <RadioButton.RenderTransform>
-                                                            <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
-                                                        </RadioButton.RenderTransform>
-                                                    </RadioButton>
-                                                    <RadioButton x:Name="euv1Spg2Nej" Content="Nej" Margin="15,0,0,0">
-                                                        <RadioButton.RenderTransform>
-                                                            <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
-                                                        </RadioButton.RenderTransform>
-                                                    </RadioButton>
-                                                </StackPanel>
-                                            </Border>
                                         </DockPanel>
                                     </StackPanel>
                                 </Border>
@@ -96,20 +68,6 @@
                                                 <TextBlock TextWrapping="WrapWithOverflow" Text="A. Opbygge, konfigurere, vedligeholde og administrere server- og netværksløsninger samt designe avancerede LAN- og WAN-netværk." FontSize="14.5" Margin="0,0,0,5"/>
                                                 <TextBlock TextWrapping="WrapWithOverflow" Text="B. Analysere, designe, implementere og administrere sikkerhedsløsninger på serverbaserede netværk." FontSize="14.5"/>
                                             </StackPanel>
-                                            <Border BorderBrush="Black" BorderThickness="1">
-                                                <StackPanel Margin="0,40,0,0">
-                                                    <RadioButton x:Name="euv1Spg3Ja" Content="Ja" Margin="15,0,0,50">
-                                                        <RadioButton.RenderTransform>
-                                                            <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
-                                                        </RadioButton.RenderTransform>
-                                                    </RadioButton>
-                                                    <RadioButton x:Name="euv1Spg3Nej" Content="Nej" Margin="15,0,0,0">
-                                                        <RadioButton.RenderTransform>
-                                                            <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
-                                                        </RadioButton.RenderTransform>
-                                                    </RadioButton>
-                                                </StackPanel>
-                                            </Border>
                                         </DockPanel>
                                     </StackPanel>
                                 </Border>
@@ -121,29 +79,24 @@
                                                 <TextBlock TextWrapping="WrapWithOverflow"  Text="A. Udvikling af programmer, herunder avanceret programudvikling af it-systemer som standalone applikationer, client-server applikationer, web applikationer m.v." FontSize="14.5"  Margin="0,5,0,5"/>
                                                 <TextBlock TextWrapping="WrapWithOverflow"  Text="B. Udviklingsopgaver inden for embeddede systemer og databasesystemer." FontSize="14.5"/>
                                             </StackPanel>
-                                            <Border BorderBrush="Black" BorderThickness="1">
-                                                <StackPanel Margin="0,40,0,0">
-                                                    <RadioButton x:Name="euv1Spg4Ja" Content="Ja" Margin="15,0,0,50">
-                                                        <RadioButton.RenderTransform>
-                                                            <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
-                                                        </RadioButton.RenderTransform>
-                                                    </RadioButton>
-                                                    <RadioButton x:Name="euv1Spg4Nej" Content="Nej" Margin="15,0,0,0">
-                                                        <RadioButton.RenderTransform>
-                                                            <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
-                                                        </RadioButton.RenderTransform>
-                                                    </RadioButton>
-                                                </StackPanel>
-                                            </Border>
                                         </DockPanel>
                                     </StackPanel>
                                 </Border>
-                                <Border BorderBrush="Gray" BorderThickness="1" Margin="0,20,0,0" x:Name="euvDokumentation">
+                                <Border BorderBrush="Gray" BorderThickness="1" Margin="0,20,0,0" x:Name="euv1sporgsmalBorder">
                                     <StackPanel>
-                                        <TextBlock TextWrapping="WrapWithOverflow"  Text="Hvis eleven kan dokumentere ovennævnt spørgsmål vil resultater være følgende: Alle 3 retninger skal havde svaret ja til: Har du 2 års relevant erhvervserfaring, inde for de sidste 5 år?" FontSize="18" Margin="0,10,0,0"/>
-                                        <TextBlock TextWrapping="WrapWithOverflow"  Text="It supporter = ja til spørgsmål 1 og 2 = EUV1 It supporter" FontSize="14.5"  Margin="0,5,0,0"/>
-                                        <TextBlock TextWrapping="WrapWithOverflow"  Text="Infrastruktur = ja til spørgsmål 1,2 og 3 = EUV1 infrastruktur" FontSize="14.5" Margin="0,5,0,5"/>
-                                        <TextBlock TextWrapping="WrapWithOverflow"  Text="Programmering= ja til spørgsmål 1,2 og 4 = EUV1 programmering" FontSize="14.5"/>
+                                        <TextBlock Text="Passer disse spørgsmål til din erfaring?" FontSize="20" HorizontalAlignment="Center"/>
+                                        <DockPanel Height="32" Name="euv1spg">
+                                            <RadioButton x:Name="euv1SporgsmalJa" Margin="5" GroupName="euv1sporgsmal">
+                                                <RadioButton.RenderTransform>
+                                                    <ScaleTransform ScaleX="2" ScaleY="2"/>
+                                                </RadioButton.RenderTransform>
+                                            </RadioButton>
+                                            <RadioButton x:Name="euv1SporgsmalNej" Margin="5" GroupName="euv1sporgsmal">
+                                                <RadioButton.RenderTransform>
+                                                    <ScaleTransform ScaleX="2" ScaleY="2"/>
+                                                </RadioButton.RenderTransform>
+                                            </RadioButton>
+                                        </DockPanel>
                                     </StackPanel>
                                 </Border>
                             </StackPanel>
