--- a/Views/MeritBlanketView.xaml
+++ b/Views/MeritBlanketView.xaml
@@ -9,100 +9,126 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Border Grid.Row="0" BorderBrush="Gray" BorderThickness="0" Visibility="Visible">
-                <StackPanel Margin="10"  Grid.Column="0" Grid.Row="4"  x:Name="meritBlanket" >
+            <StackPanel Margin="10"  Grid.Column="0" Grid.Row="4"  x:Name="meritBlanket" >
 
-                    <Label Content="Ansøgning om merit på Grundforløb , GF2:" Margin="10" FontSize="20" FontWeight="Bold" />
-                    <Border BorderBrush="Gray" BorderThickness="1" Margin="10" x:Name="DanskValidation" >
-                        <StackPanel Margin="10">
-                            <Label Content="Dansk:" FontSize="20" FontWeight="Bold"/>
-                            <DockPanel>
-                                <Label Content="Eksamen" FontSize="20"/>
-                                <CheckBox x:Name="DanskEksamenChecked"  Margin="5" HorizontalAlignment="Left" >
-                                    <CheckBox.LayoutTransform>
-                                        <ScaleTransform ScaleX="2" ScaleY="2" />
+                <Label Content="Ansøgning om merit på Grundforløb , GF2:" Margin="10" FontSize="20" FontWeight="Bold" />
+                <Border BorderBrush="Gray" BorderThickness="1" Margin="10" x:Name="DanskValidation" >
+                    <StackPanel Margin="10">
+                        <Label Content="Dansk:" FontSize="20" FontWeight="Bold"/>
+                        <DockPanel>
+                           
+                            <Label Content="Eksamen" FontSize="20"/>
+                            <RadioButton x:Name="DanskEksamenJa" Margin="5" HorizontalAlignment="Left" GroupName="DEksamen" >
+                                <RadioButton.LayoutTransform>
+                                    <ScaleTransform ScaleX="2" ScaleY="2" />
+                                </RadioButton.LayoutTransform>
+                            </RadioButton>
 
+                            <RadioButton x:Name="DanskEksamenNej" Margin="5" HorizontalAlignment="Right" GroupName="DEksamen">
+                                <RadioButton.LayoutTransform>
+                                    <ScaleTransform ScaleX="2" ScaleY="2" />
+                                </RadioButton.LayoutTransform>
+                            </RadioButton>
 
-                                    </CheckBox.LayoutTransform>
-                                </CheckBox>
+                            <Label Content="Undervis" FontSize="20"/>
+                            <RadioButton x:Name="DanskUndervisJa" Margin="5" HorizontalAlignment="Left" GroupName="DUndervis">
+                                <RadioButton.LayoutTransform>
+                                    <ScaleTransform ScaleX="2" ScaleY="2"/>
+                                </RadioButton.LayoutTransform>
+                            </RadioButton>
+                            
+                            <RadioButton x:Name="DanskUndervisNej" Margin="5" HorizontalAlignment="Left" GroupName="DUndervis">
+                                <RadioButton.LayoutTransform>
+                                    <ScaleTransform ScaleX="2" ScaleY="2"/>
+                                </RadioButton.LayoutTransform>
+                            </RadioButton>
 
-                                <Label Content="Undervis" FontSize="20"/>
-                                <CheckBox x:Name="DanskUndervisChecked"  Margin="5" HorizontalAlignment="Left">
-                                    <CheckBox.LayoutTransform>
-                                        <ScaleTransform ScaleX="2" ScaleY="2"/>
-                                    </CheckBox.LayoutTransform>
-                                </CheckBox>
-
-                                <Label Content="Niveau" FontSize="20"/>
+                            <Label Content="Niveau" FontSize="20"/>
                             <ComboBox x:Name="ComboboxDansk" FontSize="20" SelectionChanged="ComboboxFagNiveau_SelectionChanged">
-                                </ComboBox>
-                            </DockPanel>
+                            </ComboBox>
+                            
+                        </DockPanel>
+                    </StackPanel>
+                </Border>
 
+                <Border BorderBrush="Gray" BorderThickness="1" Margin="10" x:Name="EngelskValidation">
+                    <StackPanel Margin="10">
+                        <Label Content="Engelsk:" FontSize="20" FontWeight="Bold"/>
+                        <DockPanel>
+                            
+                            <Label Content="Eksamen" FontSize="20"/>
+                            <RadioButton x:Name="EngelskEksamenJa" Margin="5" HorizontalAlignment="Left" GroupName="EEksamen">
+                                <RadioButton.LayoutTransform>
+                                    <ScaleTransform ScaleX="2" ScaleY="2"/>
+                                </RadioButton.LayoutTransform>
+                            </RadioButton>
+                            
+                            <RadioButton x:Name="EngelskEksamenNej" Margin="5" HorizontalAlignment="Right" GroupName="EEksamen">
+                                <RadioButton.LayoutTransform>
+                                    <ScaleTransform ScaleX="2" ScaleY="2"/>
+                                </RadioButton.LayoutTransform>
+                            </RadioButton>
 
-                        </StackPanel>
+                            <Label Content="Undervis" FontSize="20"/>
+                            <RadioButton x:Name="EngelskUndervisJa" Margin="5" HorizontalAlignment="Left" GroupName="EUndervis">
+                                <RadioButton.LayoutTransform>
+                                    <ScaleTransform ScaleX="2" ScaleY="2"/>
+                                </RadioButton.LayoutTransform>
+                            </RadioButton>
+                            
+                            <RadioButton x:Name="EngelskUndervisNej" Margin="5" HorizontalAlignment="Right" GroupName="EUndervis">
+                                <RadioButton.LayoutTransform>
+                                    <ScaleTransform ScaleX="2" ScaleY="2"/>
+                                </RadioButton.LayoutTransform>
+                            </RadioButton>
 
-                    </Border>
-
-
-
-                    <Border BorderBrush="Gray" BorderThickness="1" Margin="10" x:Name="EngelskValidation">
-                        <StackPanel Margin="10">
-                            <Label Content="Engelsk:" FontSize="20" FontWeight="Bold"/>
-                            <DockPanel>
-                                <Label Content="Eksamen" FontSize="20"/>
-                                <CheckBox x:Name="EngelskEksamenChecked"  Margin="5" HorizontalAlignment="Left">
-                                    <CheckBox.LayoutTransform>
-                                        <ScaleTransform ScaleX="2" ScaleY="2"/>
-                                    </CheckBox.LayoutTransform>
-                                </CheckBox>
-
-                                <Label Content="Undervis" FontSize="20"/>
-                                <CheckBox x:Name="EngelskUndervisChecked"  Margin="5" HorizontalAlignment="Left">
-                                    <CheckBox.LayoutTransform>
-                                        <ScaleTransform ScaleX="2" ScaleY="2"/>
-                                    </CheckBox.LayoutTransform>
-                                </CheckBox>
-
-                                <Label Content="Niveau" FontSize="20"/>
+                            <Label Content="Niveau" FontSize="20"/>
                             <ComboBox x:Name="ComboboxEngelsk" FontSize="20"  >
-                                </ComboBox>
-                            </DockPanel>
+                            </ComboBox>
+                            
+                        </DockPanel>
+                    </StackPanel>
+                </Border>
 
+                <Border BorderBrush="Gray" BorderThickness="1" Margin="10" x:Name="MatematikValidation">
+                    <StackPanel Margin="10">
+                        <Label Content="Matematik:" FontSize="20" FontWeight="Bold"/>
+                        <DockPanel>
 
-                        </StackPanel>
+                            <Label Content="Eksamen" FontSize="20"/>
+                            <RadioButton x:Name="MatematikEksamenJa" Margin="5" HorizontalAlignment="Left" GroupName="MEksamen">
+                                <RadioButton.LayoutTransform>
+                                    <ScaleTransform ScaleX="2" ScaleY="2"/>
+                                </RadioButton.LayoutTransform>
+                            </RadioButton>
 
-                    </Border>
+                            <RadioButton x:Name="MatematikEksamenNej" Margin="5" HorizontalAlignment="Right" GroupName="MEksamen">
+                                <RadioButton.LayoutTransform>
+                                    <ScaleTransform ScaleX="2" ScaleY="2"/>
+                                </RadioButton.LayoutTransform>
+                            </RadioButton>
 
+                            <Label Content="Undervis" FontSize="20"/>
+                            <RadioButton x:Name="MatematikUndervisJa" Margin="5" HorizontalAlignment="Left" GroupName="MUndervis">
+                                <RadioButton.LayoutTransform>
+                                    <ScaleTransform ScaleX="2" ScaleY="2"/>
+                                </RadioButton.LayoutTransform>
+                            </RadioButton>
 
+                            <RadioButton x:Name="MatematikUndervisNej" Margin="5" HorizontalAlignment="Right" GroupName="MUndervis">
+                                <RadioButton.LayoutTransform>
+                                    <ScaleTransform ScaleX="2" ScaleY="2"/>
+                                </RadioButton.LayoutTransform>
+                            </RadioButton>
 
-
-                    <Border BorderBrush="Gray" BorderThickness="1" Margin="10" x:Name="MatematikValidation">
-                        <StackPanel Margin="10">
-                            <Label Content="Matematik:" FontSize="20" FontWeight="Bold"/>
-                            <DockPanel>
-                                <Label Content="Eksamen" FontSize="20"/>
-                                <CheckBox x:Name="MatematikEksamenChecked"  Margin="5" HorizontalAlignment="Left">
-                                    <CheckBox.LayoutTransform>
-                                        <ScaleTransform ScaleX="2" ScaleY="2"/>
-                                    </CheckBox.LayoutTransform>
-                                </CheckBox>
-
-                                <Label Content="Undervis" FontSize="20"/>
-                                <CheckBox x:Name="MatematikUndervisChecked"  Margin="5" HorizontalAlignment="Left">
-                                    <CheckBox.LayoutTransform>
-                                        <ScaleTransform ScaleX="2" ScaleY="2"/>
-                                    </CheckBox.LayoutTransform>
-                                </CheckBox>
-
-                                <Label Content="Niveau" FontSize="20"/>
+                            <Label Content="Niveau" FontSize="20"/>
                             <ComboBox x:Name="ComboboxMatematik" FontSize="20" >
-                                </ComboBox>
-                            </DockPanel>
+                            </ComboBox>
 
-
-                        </StackPanel>
-
-                    </Border>
-                </StackPanel>
+                        </DockPanel>
+                    </StackPanel>
+                </Border>
+            </StackPanel>
         </Border>
     </Grid>
 </UserControl>
