--- a/Views/LederSide.xaml
+++ b/Views/LederSide.xaml
@@ -1,44 +1,62 @@
-﻿<Window x:Class="GFElevInterview.Views.LederSide"
+﻿<UserControl x:Class="GFElevInterview.Views.LederSide"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GFElevInterview.Views"
         mc:Ignorable="d"
-        Title="LederSide" Height="450" Width="800">
+        d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="650"/>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="0.15*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="70"/>
             <RowDefinition Height="330"/>
         </Grid.RowDefinitions>
 
-        <Button Width="80" Height="20" x:Name="RKV" Margin="225,42,345,42" Content="RKV"/>
-        <Button  Width="80" Height="20" x:Name="Merit" Margin="336,42,234,42" Content="Merit"/>
-        <ComboBox Width="200" Height="20" x:Name="SkoleDropDown" Margin="10,74,440,10" />
-        <Button Width="80" Height="20" x:Name="SPS" Margin="225,74,345,10" Content="SPS"/>
-        <Button Width="80" Height="20" x:Name="EUD" Margin="336,74,234,10" Content="EUD"/>
-        <TextBox Width="200" Height="20" x:Name="Sogefelt" Margin="440,74,10,10"/>
+        <Button Width="80" Height="20" x:Name="RKV" Content="RKV" Click="RKV_Click" Margin="288,10,328,40" Grid.Column="0" Grid.Row="0"/>
+        <Button  Width="80" Height="20" x:Name="Merit" Content="Merit" Click="Merit_Click" Margin="399,10,217,40" Grid.Column="0" Grid.Row="0"/>
+        <ComboBox Width="200" Height="25" x:Name="SkoleDropDown" Margin="48,22,448,22" Grid.Column="0" Grid.Row="0" SelectionChanged="SkoleDropDown_SelectionChanged">
+        </ComboBox>
+        <Button Width="80" Height="20" x:Name="SPS" Content="SPS" Click="SPS_Click" Margin="288,44,328,6" Grid.Column="0" Grid.Row="0"/>
+        <Button Width="80" Height="20" x:Name="EUD" Content="EUD" Click="EUD_Click" Margin="399,44,217,6" Grid.Column="0" Grid.Row="0"/>
+        <TextBox Width="160" Height="20" x:Name="Sogefelt" Grid.Column="0" Grid.Row="0" Margin="506,44,30,6"/>
+        <Button Width="80" Height="20" x:Name="visAlle" Content="Vis Alle" Click="visAlle_Click" Margin="506,10,110,40" Grid.Column="0" Grid.Row="0"/>
 
         <Border Grid.Column="1" Grid.Row="0" Background="#495057" BorderThickness="5" BorderBrush="Gray">
-            <TextBlock  Text="Admin" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <TextBlock  Text="Admin" FontSize="28" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </Border>
         <StackPanel Background="#495057" Grid.Column="1" Grid.Row="1">
-            <Button Content="Merit Export" Margin="0,10,0,0" Width="130" Height="40" Background="Gray"/>
-            <Button Content="RKV Export" Margin="0,10,0,10" Width="130" Height="40" Background="Gray"/>
-            <Border BorderThickness="4" BorderBrush="Gray">
-                <StackPanel>
-                    <TextBlock Text="EXCEL" HorizontalAlignment="Center" FontSize="25" Margin="5"/>
-                    <Button Width="100" Height="40" Background="Gray" Content="Tilføj" FontSize="15" Margin="2"/>
-                    <Button Width="100" Height="40" Background="Gray" Content="Reset" FontSize="15" Margin="8"/>
-                </StackPanel>
-            </Border>
-            <Button Content="Tilbage" Width="100" Height="20" Background="Gray" Margin="10"/>
+            <Button Content="Merit Export" Margin="0,10,0,0" Width="80" Height="40" Background="Gray"/>
+            <Button Content="RKV Export" Margin="0,10,0,10" Width="80" Height="40" Background="Gray"/>
+            <TextBlock Text="EXCEL" HorizontalAlignment="Center" FontSize="25" Margin="5"/>
+            <Button Width="80" Height="40" Background="Gray" Content="Tilføj" FontSize="15" Margin="2"/>
+            <Button Width="80" Height="40" Background="Gray" Content="Reset" FontSize="15" Margin="8"/>
         </StackPanel>
-        <Label Height="30" Content="Søgefelt" Margin="506,44,76,30" FontSize="14"/>
-        <DataGrid Grid.Column="0" Grid.Row="1" Width="600" Height="300"/>
+
+        <DataGrid x:Name="elevTabel" AutoGenerateColumns="False" Grid.Column="0" Grid.Row="1" Margin="48,15,30,-27">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="CPR" Binding="{Binding cprNr}"/>
+                <DataGridTextColumn Header="Fornavn" Binding="{Binding fornavn}"/>
+                <DataGridTextColumn Header="Efternavn" Binding="{Binding efternavn}"/>
+                <DataGridTextColumn Header="Uddannelse" Binding="{Binding uddannelse}"/>
+                <DataGridTextColumn Header="UdannelseAdresse" Binding="{Binding udannelseAdresse}"/>
+                <DataGridTextColumn Header="SPS" Binding="{Binding sps}"/>
+                <DataGridTextColumn Header="EUD" Binding="{Binding eud}"/>
+                <DataGridTextColumn Header="ElevType" Binding="{Binding elevType}"/>
+                <DataGridTextColumn Header="DanskEksammen" Binding="{Binding danskEksammen}"/>
+                <DataGridTextColumn Header="DanskUndervisning" Binding="{Binding danskUndervisning}"/>
+                <DataGridTextColumn Header="danskNiveau" Binding="{Binding danskNiveau}"/>
+                <DataGridTextColumn Header="EngelskEksammen" Binding="{Binding engelskEksammen}"/>
+                <DataGridTextColumn Header="EngelskUndervisning" Binding="{Binding engelskUndervisning}"/>
+                <DataGridTextColumn Header="EngelskNiveau" Binding="{Binding engelskNiveau}"/>
+                <DataGridTextColumn Header="MatematikEksammen" Binding="{Binding matematikEksammen}"/>
+                <DataGridTextColumn Header="MatematikUndervisning" Binding="{Binding matematikUndervisning}"/>
+                <DataGridTextColumn Header="MatematikNiveau" Binding="{Binding matematikNiveau}"/>
+                <DataGridTextColumn Header="UddannelsesLængdeIUger" Binding="{Binding uddannelsesLængdeIUger}"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
-</Window>
+</UserControl>
