--- a/Views/LederSide.xaml
+++ b/Views/LederSide.xaml
@@ -29,8 +29,8 @@
             <TextBlock  Text="Admin" FontSize="28" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </Border>
         <StackPanel Background="#495057" Grid.Column="1" Grid.Row="1">
-            <Button Content="Merit Export" Margin="0,10,0,0" Width="80" Height="40" Background="Gray"/>
-            <Button Content="RKV Export" Margin="0,10,0,10" Width="80" Height="40" Background="Gray"/>
+            <Button Content="Merit Export" Margin="0,10,0,0" Width="80" Height="40" Background="Gray" Click="ExportMerit_Click"/>
+            <Button Content="RKV Export" Margin="0,10,0,10" Width="80" Height="40" Background="Gray" Click="ExportRKV_Click"/>
             <TextBlock Text="EXCEL" HorizontalAlignment="Center" FontSize="25" Margin="5"/>
             <Button Width="80" Height="40" Background="Gray" Content="Tilføj" FontSize="15" Margin="2"/>
             <Button Width="80" Height="40" Background="Gray" Content="Reset" FontSize="15" Margin="8"/>
