--- a/Views/LederView.xaml
+++ b/Views/LederView.xaml
@@ -32,7 +32,7 @@
             <Button Content="Merit Export" Margin="0,10,0,0" Width="80" Height="40" Background="Gray" Click="ExportMerit_Click"/>
             <Button Content="RKV Export" Margin="0,10,0,10" Width="80" Height="40" Background="Gray" Click="ExportRKV_Click"/>
             <TextBlock Text="EXCEL" HorizontalAlignment="Center" FontSize="25" Margin="5"/>
-            <Button Width="80" Height="40" Background="Gray" Content="Tilføj" FontSize="15" Margin="2"/>
+            <Button Width="80" Height="40" Background="Gray" Content="Tilføj" FontSize="15" Margin="2" x:Name="TilføjKnp" Click="TilføjKnp_Click"/>
             <Button Width="80" Height="40" Background="Gray" Content="Reset" FontSize="15" Margin="8"/>
         </StackPanel>
 
