--- a/Views/BlanketView.xaml
+++ b/Views/BlanketView.xaml
@@ -60,8 +60,8 @@
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
 
-                        <Button x:Name="btnFrem" Content="Frem" Grid.Column="1" Background="Gray" Height="50" Width="150" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="20" Foreground="White" FontSize="22" Click="Frem_Click" />
-                        <Button x:Name="btnTilbage" Content="Tilbage" Grid.Column="0" Background="Gray" Height="50" Width="150" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20" Foreground="White" FontSize="22" Click="Tilbage_Click" />
+                        <Button x:Name="btnFrem" Content="Frem" Grid.Column="1" HorizontalAlignment="Right" Click="Frem_Click" Style="{StaticResource baseButton}"/>
+                        <Button x:Name="btnTilbage" Content="Tilbage" Grid.Column="0" HorizontalAlignment="Left" Click="Tilbage_Click" Style="{StaticResource baseButton}"/>
                     </Grid>
                 </Border>
             </Grid>
